assets/css/style.css
:root {
    --primary-color: #000980;
    --white: #ffffff;
    --accent-color: #8a0096;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    color: var(--primary-color);
    font-family: 'Playfair Display', sans-serif;
}

a {
    color: var(--primary-color);
    text-decoration: none;
}

a:hover {
    color: var(--accent-color);
}

.button {
    display: inline-block; 
    padding: .6em .9em;
    border: solid 3px var(--primary-color);
    border-radius: .4em;
    font-family: 'Roboto', sans-serif;
    font-weight: bold;
    letter-spacing: .05em;
}

.button:hover {
    color: var(--white);
    background-color: var(--accent-color);
    border-color: var(--accent-color);
}

/* Header Styles */
header {
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 25px 5%;
}

header h1 {
    font-size: 2.7vw;
    letter-spacing: .2em;
}

#main-menu ul {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    justify-content: space-around;
}

#main-menu a {
    display: inline-block;
    padding: 14px 10px 10px 10px;
    margin: 0 25px;
    font-size: 1.6vw;
    font-weight: 500;
    letter-spacing: .1em;
    border-bottom: solid 4px rgba(0,0,0,0);
}

#main-menu a:hover {
    border-bottom: solid 4px var(--accent-color);
}
/* End Header Styles */

/* Global Section Styles */
section {
    padding: 50px 10% 80px 10%;
}
/* End Global Section Styles */

/* Hero Styles */
#hero img {
    margin:3% -5% 0 5%;
    width: 30%;
    min-width: 200px;
    height: auto;
    float: left;
}

#hero h2 {
    width:70%;
    font-size: 3.5vw;
    font-weight: normal;
    display: inline-block;
    margin: 18% 0 10% 0;
}
/* End Hero Styles */

/* Main Section Styles */
.main-section h2 {
    box-sizing: content-box;
    background-color: var(--primary-color);
    color: var(--white);
    font-weight: normal;
    font-size: 58px;
    display: inline-block;
    width: 120px;
    height: 120px;
    border-radius: 50%;
}
/* End Main Section Styles */

/* About Styles */
#about h2 {
    padding: 45px 100px 55px 0;
    float: right;
    margin: 0 -22% 6% 6%;
    position: relative;
    z-index: -1;
}

#about img {
    width: 40%;
    min-width: 275px;
    height: auto;
    float:right;
    margin: 110px 0 6% 6%;
}

#about-text {
    margin-top:150px;
    width: 80%;
}

#about-text p {
    margin-top: 20px;
    line-height: 2em;
    font-size: 20px;
}

#about-text .paragraph-start {
    display: inline-block;
    font-weight: bold;
    font-size: 1.25em;
}
/* End About Styles */

/* Work Styles */
#work {
    padding-bottom: 20px;
}

#work h2 {
    margin-left:5%;
    padding: 100px 25px 0px 75px;
}

#work ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

#work li {
    list-style: none;
    flex-basis: 42%;
    margin: 60px 0 60px 0;
}

#work li img {
    width: 100%;
    height: auto;
}

#work li:first-child {
    flex-basis: 100%;
    text-align: right;
}

#work li:first-child img {
    width:80%;
}

#work h3 {
    padding: 20px 0 10px 0;
    font-weight: bold;
    font-size: 24px;
    letter-spacing: .04em;
}

#work h4 {
    font-family: 'Roboto', sans-serif;
    font-weight: normal;
    font-size: 18px;
    letter-spacing: .04em;
    line-height: 1.4em;
}

#work .button {
    margin-top: 15px;
    font-size: 18px;
}
/* End Work Styles */

/* Contact Styles */
#contact h2 {
    margin-left:20%;
    font-size: 46px;
    padding: 100px 100px 0px 0;
}

#contact ul {
    margin: 20px 0 50px 40%;
    list-style: none;
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    line-height: 2.5em;
    font-weight: bold;
    letter-spacing: .05em;
}
/* End Contact Styles */

/* Footer Styles */
footer {
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 20px 40px;
}

#footer-menu ul {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    justify-content: space-around;
}

#footer-menu a {
    display: inline-block;
    padding: 10px 5px;
    margin: 0 25px;
    font-size: 16px;
    font-weight: 500;
    letter-spacing: .1em;
}

#legal {
    letter-spacing: .1em;
    opacity: .5;
}
/* End Footer Styles */

/* Media Queries */
@media screen and (max-width: 1024px) {
    header h1 {
        font-size: 32px;
        text-align: center;
        margin: 20px 0;
    }

    header h1,
    #main-menu,
    #footer-menu,
    #legal {
        flex-basis: 100%;
    }

    #legal {
        margin-top:40px;
        text-align: center;
    }

    #main-menu a,
    #footer-menu a,
    #legal {
        font-size: 18px;
    }

    #main-menu a {
        margin: 0 15px;
    }

    #hero h2 {
        font-size: 36px;
    }

    #about-text {
        width: 100%;
    }
}

@media screen and (max-width: 980px) {
    .main-section h2 {
        font-size: 52px;
        width: 85px;
        height: 85px;
    }

    #hero img {
        margin-left: 0%;
    }

    #hero h2 {
        width: calc(100% - 200px);
    }

    #work h2 {
        padding: 80px 45px 20px 55px;
    }

    #contact h2 {
        padding: 85px 100px 15px 0px;
        margin-left: 10%;
    }

    #contact ul {
        margin-left: 30%;
    }
}

@media screen and (max-width: 768px) {
    #about img {
        width: 50%;
        margin-right: 20%;
    }

    #about h2 {
        margin-left: 0;
        margin-bottom: 0;
    }

    #about img {
        margin-top: 90px;
        margin-right: 10%;
    }
    
    #about-text {
        clear:both;
        margin-top: 0;
    }

    #work li {
        flex-basis: 100%;
        margin: 40px 0 40px 0;
    }

    #work li:first-child {
        text-align: left;
    }
    
    #work li:first-child img {
        width:100%;
        margin-top:60px;
    }

    #work .button {
        font-size: 16px;
    }

    #contact ul {
        font-size: 18px;
    }
}

@media screen and (max-width: 575px) {
    .main-section h2 {
        font-size: 46px;
        width: 50px;
        height: 50px;
    }

    #hero {
        text-align: center;
    }

    #hero img {
        float: none;
        margin: 0;
    }

    #hero h2 {
        display: block;
        width: 100%;
        margin: 0;
    }

    #about img {
        min-width: 100px;
    }

    #work h2 {
        padding: 70px 70px 30px 30px;
    }

    #contact h2 {
        font-size: 32px;
        padding: 80px 95px 20px 5px;
        margin-left: 0;
    }

    #contact ul {
        margin-left: 15%;
        font-size: 16px;
    }

    #footer-menu ul {
        justify-content: flex-start;
    }

    #legal {
        text-align: left;
        font-size: 12px;
        margin-left: 25px;
    }
}

@media screen and (max-width: 375px) {
    .main-section h2 {
        font-size: 38px;
        width: 35px;
        height: 35px;
    }

    #contact h2 {
        padding: 70px 95px 30px 5px;
    }

    #contact ul {
        margin-left: 0;
    }
}
/* End Media Queries */

